--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <div class="footer">
+        <p>Copyright &#169 The Odin Project 2024</p>
+    </div>
 </body>
 </html>
