Adding header info and style

--- a/index.html
+++ b/index.html
@@ -8,8 +8,50 @@
 </head>
 <body>
     <div class="header">
-        <div class="header_bar"></div>
-        <div class="header_content"></div>
+        <div class="header_bar">
+            <div class="logo"><strong>Header Logo</strong></div>
+            <div class="links">
+                <div class="one">header link one</div>
+                <div class="two">header link two</div>
+                <div class="three">header link three</div>
+            </div>
+        </div>
+        <div class="header_content">
+            <div class="header_text">
+                <div class="header_title">This website is awesome</div>
+                <div class="header_content">This website has some subtext that
+                    goes here under the main title. It's a smaller font and the 
+                    color is lower contrast.
+                </div>
+                <div class="header_button">
+                    <button type="button">Sign up</button>
+                </div>
+            </div>
+            <div class="header_image">
+                <p>this is a placeholder for an image</p>
+            </div>
+        </div>
+    </div>
+    <div class="info">
+        <div class="info_title">Some random information</div>
+        <div class="info_flex">
+            <div class="one">
+                <div class="image"></div>
+                <div class="text">this is some subtext under and illustration or image</div>
+            </div>
+            <div class="two"></div>
+                <div class="image"></div>
+                <div class="text">this is some subtext under and illustration or image</div>
+            </div>
+            <div class="three"></div>
+                <div class="image"></div>
+                <div class="text">this is some subtext under and illustration or image</div>
+            </div>
+            <div class="four"></div>
+                <div class="image"></div>
+                <div class="text">this is some subtext under and illustration or image</div>
+            </div>
+        </div>
     </div>
     <div class="footer">
         <p>Copyright &#169 The Odin Project 2024</p>
