--- a/index.html
+++ b/index.html
@@ -34,24 +34,26 @@
     </div>
     <div class="info">
         <div class="info_title">Some random information</div>
-        <div class="info_flex">
-            <div class="one">
+        <div class="info_images">
+            <div class="image1"></div>
                 <div class="image"></div>
-                <div class="text">this is some subtext under and illustration or image</div>
-            </div>
-            <div class="two"></div>
+                <div class="text">This is some subtext under an illustration or image</div>
+            <div class="image2"></div>
                 <div class="image"></div>
-                <div class="text">this is some subtext under and illustration or image</div>
-            </div>
-            <div class="three"></div>
+                <div class="text">This is some subtext under an illustration or image</div>
+            <div class="image3"></div>
                 <div class="image"></div>
-                <div class="text">this is some subtext under and illustration or image</div>
-            </div>
-            <div class="four"></div>
+                <div class="text">This is some subtext under an illustration or image</div>
+            <div class="image4"></div>
                 <div class="image"></div>
-                <div class="text">this is some subtext under and illustration or image</div>
-            </div>
+                <div class="text">This is some subtext under an illustration or image</div>
         </div>
+    </div>
+    <div class="quote">
+        <p>This is an inspiring quote, or a testimopnial from a customer. Maybe
+            it's just filling up space, or maybe people will actually read it. 
+            Who knows? All I know is that it looks nice.</p>
+        <p class="author">-Thor, God of Thunder</p>
     </div>
     <div class="footer">
         <p>Copyright &#169 The Odin Project 2024</p>
