--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         <p>This is an inspiring quote, or a testimopnial from a customer. Maybe
             it's just filling up space, or maybe people will actually read it. 
             Who knows? All I know is that it looks nice.</p>
-        <p class="author">-Thor, God of Thunder</p>
+        <p class="author"><strong>-Thor, God of Thunder</strong></p>
     </div>
     <div class="footer">
         <p>Copyright &#169 The Odin Project 2024</p>
