Adding call to action

--- a/index.html
+++ b/index.html
@@ -55,6 +55,13 @@
             Who knows? All I know is that it looks nice.</p>
         <p class="author"><strong>-Thor, God of Thunder</strong></p>
     </div>
+    <div class="action">
+        <div class="box">
+            <p class="call"><strong>Call to action! It's time!</strong></p>
+            <p class="sign_up">Sign up for our product by clicking the button right over there</p>
+        <button type="button">Sign up</button>
+        </div>
+    </div>
     <div class="footer">
         <p>Copyright &#169 The Odin Project 2024</p>
     </div>
