Fixing flex issues in info and action sections

--- a/index.html
+++ b/index.html
@@ -35,18 +35,22 @@
     <div class="info">
         <div class="info_title">Some random information</div>
         <div class="info_images">
-            <div class="image1"></div>
+            <div class="image1">
                 <div class="image"></div>
                 <div class="text">This is some subtext under an illustration or image</div>
-            <div class="image2"></div>
+            </div>
+            <div class="image2">
                 <div class="image"></div>
                 <div class="text">This is some subtext under an illustration or image</div>
-            <div class="image3"></div>
+            </div>
+            <div class="image3">
                 <div class="image"></div>
                 <div class="text">This is some subtext under an illustration or image</div>
-            <div class="image4"></div>
+            </div>
+            <div class="image4">
                 <div class="image"></div>
                 <div class="text">This is some subtext under an illustration or image</div>
+            </div>
         </div>
     </div>
     <div class="quote">
@@ -57,9 +61,13 @@
     </div>
     <div class="action">
         <div class="box">
-            <p class="call"><strong>Call to action! It's time!</strong></p>
-            <p class="sign_up">Sign up for our product by clicking the button right over there</p>
-        <button type="button">Sign up</button>
+            <div class="container1">
+                <div class="call"><strong>Call to action! It's time!</strong></div>
+                <div class="sign_up">Sign up for our product by clicking the button right over there</div>
+            </div>
+            <div class="container2">
+                <button class="sign_up_button" type="button">Sign up</button>
+            </div>
         </div>
     </div>
     <div class="footer">
