--- a/index.html
+++ b/index.html
@@ -9,19 +9,23 @@
 <body>
     <div class="header">
         <div class="header_bar">
-            <div class="logo"><strong>Header Logo</strong></div>
+            <div class="logo"><strong>QPEE Equestrian Events Logo</strong></div>
             <div class="links">
-                <div class="one">header link one</div>
-                <div class="two">header link two</div>
-                <div class="three">header link three</div>
+                <div class="one">Events</div>
+                <div class="two">Volunteers</div>
+                <div class="three">Contact Us</div>
             </div>
         </div>
         <div class="header_content">
             <div class="header_text">
-                <div class="header_title">This website is awesome</div>
-                <div class="header_content">This website has some subtext that
-                    goes here under the main title. It's a smaller font and the 
-                    color is lower contrast.
+                <div class="header_title">Queeny Park Equestrian Events</div>
+                <div class="header_content"><p>The Corporation is exclusively a not-for profit within the meaning of the General Not For Profit Corporation Law 
+                    of the State of Missouri, Chapter 355, RSMo, as amended, and more particularly said purposes are:  To promote and 
+                    foster the advancement of and interest in equestrian events, sports, and training; teaching and competition of 
+                    horses and riders, and not for business or any other pecuniary profit whatsoever.  The Corporation may also make 
+                    periodic contributions to qualified not-for-profit organizations as the Directors of this Corporation shall deem fit.  
+                    The Corporation may carry on any or all of the actions permitted to this type of General Not For Profit Corporation 
+                    Laws of the State of Missouri.</p>
                 </div>
                 <div class="header_button">
                     <button type="button">Sign up</button>
@@ -63,7 +67,7 @@
         <div class="box">
             <div class="container1">
                 <div class="call"><strong>Call to action! It's time!</strong></div>
-                <div class="sign_up">Sign up for our product by clicking the button right over there</div>
+                <div class="sign_up">Volunteer at a QPEE event! Just click the button</div>
             </div>
             <div class="container2">
                 <button class="sign_up_button" type="button">Sign up</button>
@@ -71,7 +75,7 @@
         </div>
     </div>
     <div class="footer">
-        <p>Copyright &#169 The Odin Project 2024</p>
+        <p>Copyright &#169 QPEE 2024</p>
     </div>
 </body>
 </html>
