Changes to header and intro text.

--- a/index.html
+++ b/index.html
@@ -3,29 +3,47 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="2023 Schedule of Events for Queeny Park Equestrian Events, including the Horse Trials.">
+    <meta name="keywords" content="Queeny Park, Queeny Park Equestrian, Queeny Park Equestrian Events, equestrian sports, equestrian park, cross-country jumping, clinics, cross-country schooling, hunter paces, mini-event, eventing, Horse Trials, dressage, St. Louis equestrian">
     <link rel="stylesheet" href="styles/style.css">
-    <title>Document</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/solid.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/fontawesome.min.css">
+    <link rel="icon" href="images/qp_horse_head.jpg" sizes="32x32">
+    <title>Queeny Park Equestrian Events</title>
 </head>
 <body>
     <div class="header">
         <div class="header_bar">
-            <div class="logo"><strong>QPEE Equestrian Events Logo</strong></div>
-            <div class="links">
-                <div class="one">Events</div>
-                <div class="two">Volunteers</div>
-                <div class="three">Contact Us</div>
-            </div>
+            <tr>
+                <th class="logo"><img src="images/QP_logo.gif" alt="QPEE logo"></th>
+                <div class="links">
+                    <th>Events <i class="fa-solid fa-grip-lines-vertical"></i></th>
+                    <th>Volunteers <i class="fa-solid fa-grip-lines-vertical"></i></th>
+                    <th>Cross-country course info <i class="fa-solid fa-grip-lines-vertical"></i></th>
+                    <th>About Queeny Park <i class="fa-solid fa-grip-lines-vertical"></i></th>
+                    <th>Directions <i class="fa-solid fa-grip-lines-vertical"></i></th>
+                    <th>Helpful Links <i class="fa-solid fa-grip-lines-vertical"></i></th>
+                    <th>Contact Us <i class="fa-solid fa-grip-lines-vertical"></i></th>
+                </div>
+            </tr>
         </div>
+    </div>
         <div class="header_content">
             <div class="header_text">
                 <div class="header_title">Queeny Park Equestrian Events</div>
-                <div class="header_content"><p>The Corporation is exclusively a not-for profit within the meaning of the General Not For Profit Corporation Law 
-                    of the State of Missouri, Chapter 355, RSMo, as amended, and more particularly said purposes are:  To promote and 
-                    foster the advancement of and interest in equestrian events, sports, and training; teaching and competition of 
-                    horses and riders, and not for business or any other pecuniary profit whatsoever.  The Corporation may also make 
-                    periodic contributions to qualified not-for-profit organizations as the Directors of this Corporation shall deem fit.  
-                    The Corporation may carry on any or all of the actions permitted to this type of General Not For Profit Corporation 
-                    Laws of the State of Missouri.</p>
+                <div class="header_content">
+                    Queeny Park Equestrian Events (QPEE) is a 501c3 not-for profit with a purpose of promoting and 
+                    fostering the advancement of and interest in equestrian events, sports, training, teaching and competition of 
+                    horses and riders, in the St. Louis area.
+                    <br>
+                    It started in 1978 when Wayne C. Kennedy, a former Director of St. Louis County Parks and Recteation, built a cross-country 
+                    course at Queeny Park. He felt that the Park had the rolling terrain necessary for a good event, after visiting the 1978 World 
+                    Championships at the Kentucky Horse Park. Mr Kennedy then asked Richard A. Wessel, then owner of Wessel Stables, to help 
+                    oragnize this event, establishing QPEE.
+                    <br>
+                    The original cross country course was designed by Richard Newton who owrked to biuld it with Mr. Kennedy and Brock Fitzgerald, 
+                    formerly of Queeny Park. In 1980-1981 Mr. Fitzgerald and Mr. Wessel became co-organizers of the Queeny Park Horse Trials, 
+                    QPEE's signature event. 
                 </div>
                 <div class="header_button">
                     <button type="button">Sign up</button>
