--- a/index.html
+++ b/index.html
@@ -54,6 +54,27 @@
             </div>
         </div>
     </div>
+    <div class="calendar">
+        <div class="upcoming_events">Up Coming Events
+        <!-- Eventually read this from a google calendar API if there is one for now do tris by hand.-->
+            <div class="event1">Event 1 title
+                <div class="date1">Date 1</div>
+                <div class="link1">Link to event page or anchor</div>
+            </div>
+            <div class="event2">Event 2 title
+                <div class="date2">Date 2</div>
+                <div class="link2">Link to event page or anchor</div>
+            </div>
+            <div class="event3">Event 3 title
+                <div class="date3">Date 3</div>
+                <div class="link3">Link to event page or anchor</div>
+            </div>
+            <div class="event4">Event 4 title
+                <div class="date4">Date 4</div>
+                <div class="link4">Link to event page or anchor</div>
+            </div>
+        </div>
+    </div>
     <div class="info">
         <div class="info_title">Some random information</div>
         <div class="info_images">
