Adding signature events and Testimonial

--- a/index.html
+++ b/index.html
@@ -70,31 +70,30 @@
         </div>
     </div>
     <div class="info">
-        <div class="info_title">Some random information</div>
+        <div class="info_title">Signature Events</div>
         <div class="info_images">
             <div class="image1">
                 <div class="image"></div>
-                <div class="text">This is some subtext under an illustration or image</div>
+                <div class="text">Horse Trials</div>
             </div>
             <div class="image2">
                 <div class="image"></div>
-                <div class="text">This is some subtext under an illustration or image</div>
+                <div class="text">Cross Country Schooling Days</div>
             </div>
             <div class="image3">
                 <div class="image"></div>
-                <div class="text">This is some subtext under an illustration or image</div>
+                <div class="text">Hunter Pace</div>
             </div>
             <div class="image4">
                 <div class="image"></div>
-                <div class="text">This is some subtext under an illustration or image</div>
+                <div class="text">Fix-a-test</div>
             </div>
         </div>
     </div>
     <div class="quote">
-        <p>This is an inspiring quote, or a testimopnial from a customer. Maybe
-            it's just filling up space, or maybe people will actually read it. 
-            Who knows? All I know is that it looks nice.</p>
-        <p class="author"><strong>-Thor, God of Thunder</strong></p>
+        <p>Queeny Park Horse Trials is the place you'll find where the course 
+            will provide a nice season opener for you and your horse, as well 
+            as an event where you can qualify for the AECs early in the season!</p>
     </div>
     <div class="action">
         <div class="box">
