--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 <div class="menu_item">Events</div>
                 <div class="menu_item">Volunteers</div>
                 <div class="menu_item">Cross-country course info</div>
-                <div class="menu_item">About Queeny Park</div>
+                <div class="menu_item"><a href="about_queeny.html">About Queeny Park</a></div>
                 <div class="menu_item">Directions</div>
                 <div class="menu_item">Helpful Links</div>
                 <div class="menu_item">Contact Us</div>
