Adding volunteer page

--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
 <body>
     <div class="header">
         <div class="header_bar">
-            <div class="logo"><img src="images/QP_logo.gif" alt="QPEE logo"></div>
+            <div class="logo"><a href="index.html"><img src="images/QP_logo.gif" alt="QPEE logo"></a></div>
             <div class="links">
                 <div class="menu_item">Events</div>
-                <div class="menu_item">Volunteers</div>
+                <div class="menu_item"><a href="volunteers.html">Volunteers</a></div>
                 <div class="menu_item">Cross-country course info</div>
                 <div class="menu_item"><a href="about_queeny.html">About Queeny Park</a></div>
                 <div class="menu_item">Directions</div>
@@ -28,7 +28,7 @@
             <div class="header_text">
                 <div class="header_title">Queeny Park Equestrian Events</div>
                 <div class="header_content">
-                    Queeny Park Equestrian Events (QPEE) is a 501c3 not-for profit with a purpose of promoting and 
+                    Queeny Park Equestrian Events (QPEE) is a 501c3 not-for profit with the purpose of promoting and 
                     fostering the advancement of and interest in equestrian events, sports, training, teaching, competition of 
                     horses and riders, in the St. Louis area.
                     <br><br>
