Making Menu Java script adding events page.

--- a/events.html
+++ b/events.html
@@ -11,8 +11,7 @@
 </head>
 <body>
     <div id="header" class="header"></div>
-    <div class="queeny">
-        <a href="https://stlouiscountymo.gov/st-louis-county-departments/parks/places/queeny-park/">Queeny Park</a>
-    </div>
+    <div id="events" class="events"></div>
     <script src="scripts/menu.js"></script>
+    <script src="scripts/events.js"></script>
 </body>
