--- a/volunteers.html
+++ b/volunteers.html
@@ -10,20 +10,7 @@
     <title>Queeny Park Equestrian Events</title>
 </head>
 <body>
-    <div class="header">
-        <div class="header_bar">
-            <div class="logo"><a href="index.html"><img src="images/QP_logo.gif" alt="QPEE logo"></a></div>
-            <div class="links">
-                <div class="menu_item">Events</div>
-                <div class="menu_item"><a href="volunteers.html">Volunteers</a></div>
-                <div class="menu_item">Cross-country course info</div>
-                <div class="menu_item"><a href="about_queeny.html">About Queeny Park</a></div>
-                <div class="menu_item">Directions</div>
-                <div class="menu_item">Helpful Links</div>
-                <div class="menu_item">Contact Us</div>
-            </div>
-        </div>
-    </div>
+    <div id="header" class="header"></div>
     <div class="quote">
         <p>Volunteers are the heart of our organization. Signup now!</p>
         <div class="container2">
@@ -36,4 +23,5 @@
                 when and where to meet. What is being done.
             </div>
     </div>
+    <script src="scripts/menu.js"></script>
 </body>
