Adding footer javascript

--- a/about_queeny.html
+++ b/about_queeny.html
@@ -15,4 +15,5 @@
         <a href="https://stlouiscountymo.gov/st-louis-county-departments/parks/places/queeny-park/">Queeny Park</a>
     </div>
     <script src="scripts/menu.js"></script>
+    <script src="scripts/footer.js"></script>
 </body>
