--- a/events.html
+++ b/events.html
@@ -12,6 +12,8 @@
 <body>
     <div id="header" class="header"></div>
     <div id="events" class="events"></div>
+    <div id="footer" class="footer"></div>
     <script src="scripts/menu.js"></script>   
     <script src="scripts/events.js"></script>
+    <script src="scripts/footer.js"></script>
 </body>
