--- a/volunteers.html
+++ b/volunteers.html
@@ -23,5 +23,7 @@
                 when and where to meet. What is being done.
             </div>
     </div>
+    <div id="footer" class="footer"></div>
     <script src="scripts/menu.js"></script>
+    <script src="scripts/footer.js"></script>
 </body>
