--- a/index.html
+++ b/index.html
@@ -93,9 +93,8 @@
             </div>
         </div>
     </div>
-    <div class="footer">
-        <p>Copyright &#169 QPEE 2024</p>
-    </div>
+    <div id="footer" class="footer"></div>
     <script src="scripts/menu.js"></script>
+    <script src="scripts/footer.js"></script>
 </body>
 </html>
