Working on Calendar

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                     Championships at the Kentucky Horse Park. Mr Kennedy then asked Richard A. Wessel, then owner of Wessel Stables, to help 
                     oragnize this event, establishing QPEE.
                     <br><br>
-                    The original cross country course was designed by Richard Newton who owrked to biuld it with Mr. Kennedy and Brock Fitzgerald, 
+                    The original cross country course was designed by Richard Newton who worked to biuld it with Mr. Kennedy and Brock Fitzgerald, 
                     formerly of Queeny Park. In 1980-1981 Mr. Fitzgerald and Mr. Wessel became co-organizers of the Queeny Park Horse Trials, 
                     QPEE's signature event. 
                 </div>
@@ -33,7 +33,7 @@
                 </div>
             </div>
             <div class="header_image">
-                <p>this is a placeholder for an image</p>
+                <img src="images/queeny_park.jpg" alt="Queeny Park image">
             </div>
         </div>
     </div>
@@ -60,19 +60,19 @@
         <div class="info_title">Signature Events</div>
         <div class="info_images">
             <div class="image1">
-                <div class="image"></div>
+                <div class="image"><img src="images/horse_trials.jpg" alt="Horse Trials image"></div>
                 <div class="text">Horse Trials</div>
             </div>
             <div class="image2">
-                <div class="image"></div>
+                <div class="image"><img src="images/xc_schooling.jpg" alt="XC Schooling image"></div>
                 <div class="text">Cross Country Schooling Days</div>
             </div>
             <div class="image3">
-                <div class="image"></div>
-                <div class="text">Hunter Pace</div>
+                <div class="image"><img src="images/hunter_pace.jpg" alt="Hunterpace image"></div>
+                <div class="text">Hunter Paces and Fun Rides</div>
             </div>
             <div class="image4">
-                <div class="image"></div>
+                <div class="image"><img src="images/fix_a_test.jpg" alt="Dressage image"></div>
                 <div class="text">Fix-a-test</div>
             </div>
         </div>
