--- a/events.html
+++ b/events.html
@@ -14,6 +14,6 @@
     <div id="events" class="events"></div>
     <div id="footer" class="footer"></div>
     <script src="scripts/menu.js"></script>   
-    <script src="scripts/events.js"></script>
+    <script type="module" src="scripts/events.js"></script>
     <script src="scripts/footer.js"></script>
 </body>
