--- a/events.html
+++ b/events.html
@@ -11,9 +11,10 @@
 </head>
 <body>
     <div id="header" class="header"></div>
-    <div id="events" class="events"></div>
-    <div id="footer" class="footer"></div>
+    <div id="events2" class="events"></div>
     <script src="scripts/menu.js"></script>   
-    <script type="module" src="scripts/events.js"></script>
+    <!-- <script type="module" src="scripts/events.js"></script> -->
+    <script src="scripts/events2.js"></script>
+    <div id="footer" class="footer"></div>
     <script src="scripts/footer.js"></script>
 </body>
