--- a/events.html
+++ b/events.html
@@ -14,6 +14,13 @@
     <div id="events" class="events"></div>
     <div id="footer" class="footer"></div>
     <script src="scripts/menu.js"></script>   
-    <script type="module" src="scripts/events.js"></script>
+    <script>
+        const event = {"date": "2026-04-12 08:00", "text": "Schooling Day and Ride a Test", "link": "None"};
+        const objEvent = JSON.parse(event);
+        document.getElementsById("eventName").innerHTML  = obj["date"];
+    </script>
+    <br>
+    Fix-a-test
+    <script type="module" src="scripts/events2.js"></script>
     <script src="scripts/footer.js"></script>
 </body>
